--- a/config/edge_32_standard.yaml
+++ b/config/edge_32_standard.yaml
@@ -2,10 +2,10 @@
 
 # Model Architecture
 model:
-  use_fourier: false
+  use_fourier: true
   use_perceptual_loss: true
   input_shape: [128, 256, 1]
-  latent_dims: 4
+  latent_dims: 8
   n_base_features: 64
 
 # Sensor Configuration
@@ -15,16 +15,16 @@ sensors:
 
 # Training Parameters
 training:
-  vae_epochs: 100
-  flr_epochs: 200
+  vae_epochs: 250  # Slightly more epochs for Fourier
+  flr_epochs: 150
   vae_learning_rate: 0.0001
-  flr_learning_rate: 0.00005
-  batch_size: 8
+  flr_learning_rate: 0.0001
+  batch_size: 8    # Smaller batch for Fourier due to memory
   test_split: 0.2
   shuffle_buffer: 1000
-  patience: 15
-  reduce_lr_patience: 7
-  gradient_clip_norm: 1.0      # Gradient clipping norm (1.0 is conservative)
+  patience: 100
+  reduce_lr_patience: 20
+  gradient_clip_norm: 2.0      # Gradient clipping norm (1.0 is conservative)
 
 # Data Configuration
 data:
