--- a/config/random_8_standard.yaml
+++ b/config/random_8_standard.yaml
@@ -1,4 +1,5 @@
-# Random Sensor Layout Configuration
+# Edge Sensor Layout Configuration with Fourier Enhancement
+# Fourier-enhanced edge sensors
 
 # Model Architecture
 model:
@@ -15,16 +16,17 @@ sensors:
 
 # Training Parameters
 training:
-  vae_epochs: 100
-  flr_epochs: 200
+  vae_epochs: 250  # Slightly more epochs for Fourier
+  flr_epochs: 150
   vae_learning_rate: 0.0001
-  flr_learning_rate: 0.00005
-  batch_size: 8
+  flr_learning_rate: 0.0001
+  batch_size: 8    # Smaller batch for Fourier due to memory
   test_split: 0.2
   shuffle_buffer: 1000
-  patience: 15
-  reduce_lr_patience: 7
-  gradient_clip_norm: 1.0      # Gradient clipping norm (1.0 is conservative)
+  patience: 100
+  reduce_lr_patience: 20
+  gradient_clip_norm: 2.0      # Gradient clipping norm (1.0 is conservative)
+
 
 # Data Configuration
 data:
